syntax = "proto3";

package user;

// -----------------User service-----------------

service UserService {
    rpc GetUser(GetUserRequest) returns (User) {}
}

message GetUserRequest {
    string user_id = 1;
}

message User {
    string id = 1;
    string username = 2;
}
